登录模块添加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">验证测试</string>
+    <string name="app_table">appTable</string>
     <string name="language">语言</string>
     <string name="chinese">中文</string>
     <string name="english">英文</string>
